# awty

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/assets/: demo.tape  demo.txt
.github/workflows/: release.yml
src/: cli.rs  commands.rs  main.rs  parsing.rs  utils.rs
